--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -16,10 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.20
-
-      - name: Build
-        run: go build -v ./...
+          go-version: 'stable'
 
       - name: Test
         run: go test -v ./...
